Using Existing webpage
try

--- a/index.html
+++ b/index.html
@@ -1,9 +1,176 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Prof. Zhifu Xie</title>
-</head>
-<body>
-	<h1>Hello, World</h1>
-</body>
 <html>
+
+<head>
+
+		<style>.COLDVwxNewStyle captionText {font-family: Arial; font-size: 10px; color: black; }.COLDVwxNewStyle INPUT {width:100px; height:13px; border:0px;font-size:10px;}.COLDVwxNewStyle INPUT.COLDVgoButton {width:28px; height:19px; border:0px;}.COLDVwxNewStyle TD.COLDVcaptionText {font-family: Arial; font-size: 10px; color: black; }a.COLDVvertLinks:visited {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}a.COLDVvertLinks:link {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}a.COLDVvertLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}.COLDVwxNewStyle td {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}.COLDVwxNewStyle A.COLDVvertLinks:hover {color: #99CCFF;background:none;text-decoration:underline;} a.COLDVsmLinks:visited {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF; } a.COLDVsmLinks:link {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF; } .COLDVwxNewStyle a.COLDVsmLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF; }.COLDVwxNewStyle A.COLDVsmLinks:hover {color: #99CCFF;background:none;text-decoration:underline; } .COLDVwxNewStyle FONT.COLDVobs1 {color:#000000; font-family:verdana,arial; font-size:18px;font-weight:bold;}.COLDVwxNewStyle FONT.COLDVobs2 {color:#000000; font-family:verdana; font-size:10px;}.COLDVwxNewStyle TD.COLDVobsWx {font-family: Arial;font-size: 11px; color:#000000;font-weight:bold;}a.COLDVcityInfo:visited{ font-family: Arial,Verdana; font-size: 11px;color: #FFFFFF;font-weight:bold; }a.COLDVcityInfo:link{ font-family: Arial,Verdana; font-size: 11px;color: #FFFFFF;font-weight:bold; }.COLDVwxNewStyle a.COLDVcityInfo{ font-family: Arial,Verdana; font-size: 11px;color: #FFFFFF;font-weight:bold; }.COLDVwxNewStyle A.COLDVcityInfo:hover { color: #99CCFF;background:none; text-decoration:underline;font-weight:bold;}a.COLDValertInfo:visited{ font-family: Arial,Verdana; font-size: 11px;color: red;}a.COLDValertInfo:link{ font-family: Arial,Verdana; font-size: 11px;color: red;}.COLDVwxNewStyle a.COLDValertInfo{ font-family: Arial,Verdana; font-size: 11px;color: red;}.COLDVwxNewStyle A.COLDValertInfo:hover { color: #99CCFF;background:none;text-decoration:underline; }.COLDVwxNewStyle A.COLDVblkVerdanaText11 {font-family:verdana,arial,helvetica; font-size: 11px; color: #000000; } .COLDVnavOut{ cursor: pointer}div.Section1
+	{page:Section1;}
+</style>
+<meta http-equiv="Content-Language" content="en-us">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>Welcome Dr. Zhifu Xie's Homepage</title>
+<style>
+<!--
+.COLDVwxNewStyle td {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}a:link.COLDVcityInfo{ font-family: Arial,Verdana; font-size: 11px;color: #FFFFFF;font-weight:bold; }.COLDVwxNewStyle a.COLDVcityInfo{ font-family: Arial,Verdana; font-size: 11px;color: #FFFFFF;font-weight:bold; } a:link.COLDVsmLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF; } .COLDVwxNewStyle a.COLDVsmLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF; } .COLDVnavOut{ cursor: pointer} .COLDVwxNewStyle FONT.COLDVobs1 {color:#000000; font-family:verdana,arial; font-size:18px;font-weight:bold;}.COLDVwxNewStyle FONT.COLDVobs2 {color:#000000; font-family:verdana; font-size:10px;}.COLDVwxNewStyle TD.COLDVobsWx {font-family: Arial;font-size: 11px; color:#000000;font-weight:bold;}a.COLDVvertLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}a:link.COLDVvertLinks {font-family: Arial,Verdana; font-size: 10px; color: #FFFFFF;}
+td	{ 
+	color : #000000; 
+	font-family : Arial; 
+	font-size : 10pt;
+}
+
+.auto-style1 {
+	font-size: small;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.auto-style2 {
+	font-size: large;
+}
+.auto-style4 {
+	font-size: small;
+}
+.auto-style5 {
+	font-size: small;
+}
+
+-->
+</style>
+</head>
+
+<body>
+
+<table cellSpacing="10" cols="2" cellPadding="8" width="95%" border="0">
+	<tr>
+		<td vAlign="top" align="middle" style="width: 2%">&nbsp;</td>
+		<td width="90%"><ALIGN=CENTER WIDTH="82%" VALIGN="TOP">
+		<center>
+		<img border="0" src="images/vsuheader.jpg" width="656" height="65"><table cellSpacing="15" cols="2" cellPadding="10" width="95%" border="0" vlign="left">
+			<tr>
+				<td vAlign="bottom" align="left" width="16%">
+				<img src="images/Zhifu_ID.jpg" align="top" width="130" height="130"></td>
+				<td vAlign="top" align="left" width="84%"><br>
+				<font face="Arial" size="3"><b>Dr. </b></font><b>
+				<font face="Arial">Zhifu Xie</font></b> <br>
+				<font face="Arial" size="2"><br>
+				Professor <br>
+				<a href="http://www.vsu.edu/pages/723.asp">Department of 
+				Mathematics &amp; Economics </a><br>
+				<a href="http://www.vsu.edu">Virginia State University</a> <br>
+				<br>
+				Office: HM 302SF <br>
+				Phone: (804)524-5410<br>
+				Email: <a href="mailto:zxie@vsu.edu">zxie@vsu.edu</a></font></td>
+			</tr>
+		</table>
+		</center><hr color="#ff3300"><font face="Arial" size="2">
+		<p>Dr. Zhifu Xie received his Ph.D. degree from&nbsp; the
+		<a href="http://www.math.byu.edu">Department of Mathematics</a>,&nbsp;
+		<a href="http://www.byu.edu">Brigham Young University</a> in 2006. He is 
+		currently a tenured Professor of Mathematics in the
+		<a href="http://www.vsu.edu/pages/723.asp">Department of Mathematics &amp; 
+		Economics </a>at <a href="http://www.vsu.edu">Virginia State 
+		University</a>.</p>
+		<p>Dr. Zhifu Xie was nominated for the 2010-2011and 2011-2012
+		<a href="http://www.schev.edu/adminfaculty/OFAprogramIndex.asp">SCHEV 
+		Outstanding Faculty Award</a> by Virginia State University. He was 
+		selected as a <a href="2011SCHEV-OFA_FinalistCertificate.pdf">2012 Outstanding Faculty Award Finalist</a> by SCHEV. </p>
+		<p class="auto-style2"><strong>Student Advising and Research:</strong></p>
+		<p>
+		<span class="auto-style1" style="color: rgb(0, 0, 0); font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);">
+		If you are a VSU math major who is interested in doing undergraduate 
+		research, or a graduate student who is interested in doing research in 
+		applied differential equations, celestial Mechanics, or mathematical 
+		biology, you are welcomed to contact me for possible advising and
+		<a href="REU.htm">Research Assistantship</a>. Here is the
+		<a href="Zhifu_UR_List.pdf">list of undergraduate students</a> I am 
+		previously advised. Summer 2015, undergraduate students use differential 
+		equations to model the <a href="http://apps.who.int/ebola/">2014-2015 
+		Ebola outbreak </a>in West Africa. Here are their findings and 
+		presentations (<a href="Publications/Liberia_Ebola_2014_presentation.pdf">Ebola 
+		in Liberia,</a>
+		<a href="Publications/SierraLeone_Ebola_2014-15_Presentation.pdf">Ebola 
+		in Sierra Leone</a>)</span></p>
+		<p><br>
+		Dr. Xie's research interests include: </p>
+		<ul>
+			<li>Dynamical System</li>
+			<li>Celestial Mechanics, N-body Problem, Central Configurations, 
+			Hamiltonian System 
+			</li>
+			<li>Nonlinear Partial Differential Equations (Elliptic Type)</li>
+			<li>Mathematical Biology</li>
+		</ul>
+		<p class="auto-style2">Research Grants:</p>
+		<p class="auto-style2">
+		<a href="REU.htm">
+		<span class="auto-style4">PIC Math program</span></a><span class="auto-style4"> 
+		at Virginia State University (2014-2015)</span></p>
+		<p class="auto-style2">
+		<a href="http://www.nsf.gov/awardsearch/showAward?AWD_ID=1409939&amp;HistoricalAwards=false">
+		<span class="auto-style4">Research Initiation Award:Central 
+		Configurations, New Variational Method and Periodic Solutions in 
+		Celestial Mechanics</span></a><span class="auto-style5">&nbsp; (<span style="color: rgb(0, 0, 0); font-family: Verdana; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);">NSF-HRD:1409939,
+		</span>2014-2016) </span> </p>
+		<p><span class="auto-style2"><a href="Zhifu_publications.htm">
+		Publications</a> </span>
+		<span style="color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-size: 18px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);">
+		(all published papers available in pdf format).</span></p>
+		<p class="auto-style2"><a href="Zhifu_Vita_2014N.pdf">CV.</a></p>
+		<p><a href="N_body_Simulation.htm">N-Body  
+Animation</a> and <a href="N_body_instruction.htm">Instruction</a>&nbsp; 
+		(A Java Applet which animates some orbits of N-body problem. Initial 
+		data are given in the format of position, velocity and mass) </p>
+		<p>Dr. Xie's Working Exprience: </p>
+		<ul>
+			<font face="Arial" size="2">
+			<li><font face="Arial" size="2">
+			August </font>2015&nbsp; -- current, Professor, Virginia 
+			State University</li>
+			<li>
+			<font face="Arial" size="2">
+			August 2011&nbsp; -- August 2015, Associate Professor, Virginia 
+			State University</font></li>
+			<li><font face="Arial" size="2">
+			August </font>2007 -- August 2011, Assistant Professor, Virginia State University</li>
+			<li>August 2006 -- August 2007, Visiting Assistant Professor, 
+			College of William &amp; Mary.</li>
+		</ul>
+		</font></font>
+		<ALIGN=CENTER WIDTH="82%" VALIGN="TOP">
+		<font face="Arial" size="2">
+		<p>&nbsp;</p>
+		<hr color="#ff3300">
+		<table border="0" width="100%">
+			<tr>
+				<td width="302"><font face="Arial" size="2">
+				<b>Teaching</b> (Fall, 2015) 
+				</font></td>
+				<td><font face="Arial" size="2">
+				<b>Teaching</b> (Spring, 2015)
+		</font>
+				</td>
+			</tr>
+			<tr>
+				<td width="302" height="87"><font face="Arial" size="2">
+				<ul>
+			<li>Math 495 Mathematical Seminar</li>
+					<li>Math 445 Introduction to Point-set Topology</li>
+		</ul>
+		</font>
+				</td>
+				<td height="87"><font face="Arial" size="2">
+				<ul>
+					<li>Math 113 Basic Mathemtaics II</li>
+			<li>Math 495 PIC Math</li>
+		</ul>
+				</font></td>
+			</tr>
+		</table>
+		<hr color="#ff3300">
+		<p>This website is under construction. Any comment 
+			or question? Please send email to <a href="mailto:zxie@vsu.edu">zxie@vsu.edu</a></font></td>
+		<td width="5%">&nbsp;</td>
+	</tr>
+</table>
+
+</body>
+
+</html>
