--- a/N_body_Simulation.htm
+++ b/N_body_Simulation.htm
@@ -29,18 +29,17 @@
 <body background="crysback.jpg">
 
 <p align="center">N-body Animation</p> 
-<p align="center">¡¡</p>
+<p align="center">Â¡Â¡</p>
 <p align="center"><img border="0" src="strings.gif" width="560" height="27"></p> 
-<p align="center">¡¡</p> 
+<p align="center">Â¡Â¡</p> 
 <p><font size="4">This program is designed to simulate the motion of the classical    
 N-body problem.</font></p>
 <p><font size="5">Click &quot;start&quot; and then &quot;resume&quot; button to run a simulation. 
 <a href="N_body_instruction.htm">More Instruction.</a></font></p>  
 <p class="auto-style2"><strong><span class="auto-style4">
 <a href="OuyangXieStar/Plot3D.html"><span class="auto-style6">Simulation One:</span></a></span></strong> 
-Pentagon-Star type for the paper titled &quot;A new variational method with SPBC and 
-many stable choreographic solutions of the Newtonian $4$-body problem&quot; by T. 
-Ouyang and Z. Xie. <a href="http://arxiv.org/abs/1306.0119">arxiv </a> </p>
+Pentagon-Star type for the paper titled &quot;Star pentagon and many stable choreographic solutions of the Newtonian $4$-body problem&quot; by T. 
+Ouyang and Z. Xie. <a href="Publications/Star5N_PhyD.pdf">arxiv </a> </p>
 <p class="auto-style2"><strong><span class="auto-style4">
 <a href="OuyangXieStarUnequalMass/Plot3D.html"><span class="auto-style5">
 Simulation Two:</span></a></span></strong>&nbsp; Pentagon-Star type solutions 
