--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Animation</a> and <a href="N_body_instruction.htm">Instruction</a>&nbsp;
 				<b>Teaching</b> (Fall, 2015) 
 				</font></td>
 				<td><font face="Arial" size="2">
-				<b>Teaching</b> (Spring, 2015)
+				<b>Teaching</b> (Spring, 2016)
 		</font>
 				</td>
 			</tr>
@@ -152,7 +152,7 @@ Animation</a> and <a href="N_body_instruction.htm">Instruction</a>&nbsp;
 				<td width="302" height="87"><font face="Arial" size="2">
 				<ul>
 			<li>Math 495 Mathematical Seminar</li>
-					<li>Math 445 Introduction to Point-set Topology</li>
+					<li>Math 112 Basic Mathematics I</li>
 		</ul>
 		</font>
 				</td>
