--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ td	{
 				<font face="Arial">Zhifu Xie</font></b> <br>
 				<font face="Arial" size="2"><br>
 				Professor <br>
-				<a href="http://www.vsu.edu/pages/723.asp">Department of 
+				<a href="http://www.cet.vsu.edu/departments/mathematics/index.php">Department of 
 				Mathematics &amp; Economics </a><br>
 				<a href="http://www.vsu.edu">Virginia State University</a> <br>
 				<br>
