--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ td	{
 		Publications</a> </span>
 		<span style="color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-size: 18px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none; background-color: rgb(255, 255, 255);">
 		(all published papers available in pdf format).</span></p>
-		<p class="auto-style2"><a href="Zhifu_Vita_2014N.pdf">CV.</a></p>
+		<p class="auto-style2"><a href="Zhifu_Vita_2015.pdf">CV.</a></p>
 		<p><a href="N_body_Simulation.htm">N-Body  
 Animation</a> and <a href="N_body_instruction.htm">Instruction</a>&nbsp; 
 		(A Java Applet which animates some orbits of N-body problem. Initial 
